[package]
name = "vcs-gitlab"
version = "0.7.0"
description = "Automate GitLab from Rust: a typed, async wrapper for the GitLab CLI (glab) ŌĆö merge requests, issues, releases, and pipelines."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["gitlab","glab","merge-request","cli","async"]
categories = ["command-line-utilities","api-bindings","asynchronous"]

[dependencies]
# Runs `glab` inside an OS job (Windows Job Object / Linux cgroup) so the process
# tree is killed on close ŌĆö no orphaned subprocesses. Also the `ProcessRunner`
# seam, `CliClient` core, and structured `Error`.
processkit.workspace = true
# Shared processkit-coupled plumbing: the argv injection guard (`reject_flag_like`),
# needed once `release_view` takes a bare positional `<tag>` string (mirrors
# vcs-github, which guards its `release_view(tag)` the same way).
# features=["serde"]: shared JSON helpers (json::null_to_empty/from_json) live in cli-support behind that feature ŌĆö added after cli-support 0.2.0, so its NEXT release must be >= minor and this floor raised to match.
vcs-cli-support = { path = "../cli-support", version = "0.7", features = ["serde"] }
# Shared git-format unified-diff model + parser (`glab mr diff` emits the same
# format `git diff`/`jj diff --git` do, so `mr_diff` parses through the shared
# parser rather than duplicating it). Re-exported below (`vcs_gitlab::FileDiff`,
# ŌĆ”) so a consumer depending only on vcs-gitlab needn't add vcs-diff directly.
vcs-diff = { path = "../diff", version = "0.7" }
# Deserialize `glab ŌĆ” --output json` output into typed structs (MergeRequest/RepoView).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `async fn` in the object-safe `GitLabApi` trait (dyn + mockall friendly).
async-trait = "0.1"
# Auto-generated `MockGitLabApi` for consumers' tests. Test-only ŌĆö enabled only
# via the `mock` feature, never compiled into production builds.
mockall = { workspace = true, optional = true }

[features]
# Expose the `mockall`-generated `MockGitLabApi` (and pull in processkit's mocks).
mock = ["dep:mockall", "processkit/mock"]
# Emit a `tracing` event per command run (forwards to processkit's `tracing`).
tracing = ["processkit/tracing"]

[dev-dependencies]
# `#[tokio::test]` for the async unit/integration tests.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
