[package]
name = "vcs-jj"
version = "0.11.0"
description = "Automate Jujutsu (jj) from Rust: a typed, async wrapper that drives the real jj CLI with its exact behavior."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["jujutsu","jj","cli","automation","async"]
categories = ["command-line-utilities","api-bindings","asynchronous","development-tools"]

[dependencies]
# Runs `jj` inside an OS job (Windows Job Object / Linux cgroup) so the process
# tree is killed on close — no orphaned subprocesses. Also the `ProcessRunner`
# seam, `CliClient` core, structured `Error`, and timeouts.
processkit.workspace = true
# Shared git-format unified-diff model + parser and the `Version` type (`jj diff
# --git` and `git diff` are byte-identical, so the parser is shared not duplicated).
# Re-exports `vcs_diff::DiffSpec` (added after 0.2.0): vcs-diff's NEXT release must
# be >= minor so `cargo set-version` widens this floor past 0.2.0 at release time.
vcs-diff = { path = "../diff", version = "0.7" }
# Shared processkit-coupled plumbing: the argv injection guard, fetch-retry
# policy, and the transient-fetch classifier (re-exported below).
vcs-cli-support = { path = "../cli-support", version = "0.7" }
# `async fn` in the object-safe `JjApi` trait (dyn + mockall friendly).
async-trait = "0.1"
# Auto-generated `MockJjApi` for consumers' tests. Test-only — enabled only via
# the `mock` feature, never compiled into production builds.
mockall = { workspace = true, optional = true }

[features]
# Expose the `mockall`-generated `MockJjApi` (and pull in processkit's mocks).
mock = ["dep:mockall", "processkit/mock"]
# Emit a `tracing` event per command run (forwards to processkit's `tracing`).
tracing = ["processkit/tracing"]

[dev-dependencies]
# `#[tokio::test]` for the async unit/integration tests. The `time` driver lets a
# retry test use a non-zero backoff without panicking (the current tests use zero).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
# Throwaway git/jj repos for the ignored integration tests. Path-only: dev-deps
# are stripped on publish, so this adds no release coupling.
vcs-testkit = { path = "../testkit" }
# Property-based fuzzing of the pure parsers (panic-freedom on arbitrary input,
# byte-exact conflict roundtrip). Stable Rust, dev-only.
proptest = "1"
# Statistical benchmark harness for the generated native-jj conflict fixture.
criterion.workspace = true

[[bench]]
name = "conflict_parse"
harness = false

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
