[package]
name = "vcs-testkit"
version = "0.7.0"
description = "Test fixtures for Git and Jujutsu automation: throwaway repos, hermetic sandboxes, and a seeded bare remote."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
license-file = "LICENSE"
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["testing","fixtures","git","jujutsu","sandbox"]
categories = ["development-tools::testing","development-tools"]

# Deliberately dependency-free: the sandboxes shell out to the real `git`/`jj`
# binaries through std::process (synchronous — test setup needs no runtime) and
# never depend on the typed wrapper crates, so any of them can use this as a
# dev-dependency without a cycle.
[dependencies]

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
