[package]
name = "vcs-watch"
version = "0.1.0"
description = "Filesystem-watch a git/jj repository and emit typed state-change events (built on vcs-core)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["git","jujutsu","watch","events","fsnotify"]
categories = ["development-tools","filesystem"]

[dependencies]
# Re-query the repository state on each filesystem change and diff snapshots —
# `detect`/`Repo::open`/`snapshot`/`local_branches` and the `RepoSnapshot` DTO.
vcs-core = { path = "../core", version = "0.3" }
# Cross-platform filesystem watcher (inotify / FSEvents / ReadDirectoryChangesW).
# Raw events only — we debounce ourselves and re-query state, so the heavier
# debouncer crates buy nothing here.
notify = "8"
# Async runtime surface: the mpsc channel bridging notify's callback thread into
# async, the debounce timer, and the background re-query task. This is the first
# crate in the workspace to take tokio as a *runtime* (not just dev) dependency —
# everything else hides it behind `processkit`; documented in the crate docs.
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[features]
# Emit a `tracing` debug event when a re-query is skipped (e.g. a transient
# mid-operation failure). Off by default; pulls in `tracing` only when enabled.
tracing = ["dep:tracing"]
# `impl futures_core::Stream for RepoWatcher`, so the watcher drops into
# `select!`/stream combinators. Off by default; pulls in only the tiny
# `futures-core` trait crate (already in the workspace's dependency graph).
stream = ["dep:futures-core"]

[dependencies.tracing]
version = "0.1"
optional = true

# Just the `Stream` trait for the `stream` feature — not futures-util.
[dependencies.futures-core]
version = "0.3"
optional = true

[dev-dependencies]
# `#[tokio::test]` for the async watcher tests; `test-util` gives the paused
# clock (`tokio::time::pause`/`advance`) the hermetic pipeline tests run on.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }
# `StreamExt::next` to drive the `stream`-feature test (works on any
# `futures_core::Stream`; lighter than futures-util and already in the graph).
tokio-stream = "0.1"
# The `ScriptedRunner` seam backing the hermetic fake-`Repo` the pipeline tests
# re-query, plus `ProcessRunner` to write the delaying/flaky test runners.
processkit.workspace = true
# `#[async_trait]` to implement `ProcessRunner` for the custom test runners.
async-trait = "0.1"
# Real throwaway git/jj repositories for the `#[ignore]` integration tests.
vcs-testkit = { path = "../testkit" }

[package.metadata.docs.rs]
# Build docs.rs with every feature so the optional surfaces (mock / tracing /
# cancellation / serde / stream) are documented (defaults alone hide them), and pass
# `--cfg docsrs` so feature-gated items render an "Available on feature `x`" badge.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
